; ModuleID = '/home/carl/AnghaBench/freebsd/stand/efi/libefi/extr_devicename.c_efi_setcurrdev.c'
source_filename = "/home/carl/AnghaBench/freebsd/stand/efi/libefi/extr_devicename.c_efi_setcurrdev.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.env_var = type { i32 }
%struct.devdesc = type { i32 }

@EV_NOHOOK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @efi_setcurrdev(%struct.env_var* %0, i32 %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.env_var*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca %struct.devdesc*, align 8
  %9 = alloca i32, align 4
  store %struct.env_var* %0, %struct.env_var** %5, align 8
  store i32 %1, i32* %6, align 4
  store i8* %2, i8** %7, align 8
  %10 = load i8*, i8** %7, align 8
  %11 = call i32 @efi_parsedev(%struct.devdesc** %8, i8* %10, i32* null)
  store i32 %11, i32* %9, align 4
  %12 = load i32, i32* %9, align 4
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %14, label %16

14:                                               ; preds = %3
  %15 = load i32, i32* %9, align 4
  store i32 %15, i32* %4, align 4
  br label %27

16:                                               ; preds = %3
  %17 = load %struct.devdesc*, %struct.devdesc** %8, align 8
  %18 = call i32 @free(%struct.devdesc* %17)
  %19 = load %struct.env_var*, %struct.env_var** %5, align 8
  %20 = getelementptr inbounds %struct.env_var, %struct.env_var* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = load i32, i32* %6, align 4
  %23 = load i32, i32* @EV_NOHOOK, align 4
  %24 = or i32 %22, %23
  %25 = load i8*, i8** %7, align 8
  %26 = call i32 @env_setenv(i32 %21, i32 %24, i8* %25, i32* null, i32* null)
  store i32 0, i32* %4, align 4
  br label %27

27:                                               ; preds = %16, %14
  %28 = load i32, i32* %4, align 4
  ret i32 %28
}

declare dso_local i32 @efi_parsedev(%struct.devdesc**, i8*, i32*) #1

declare dso_local i32 @free(%struct.devdesc*) #1

declare dso_local i32 @env_setenv(i32, i32, i8*, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
